Fix regex